# hypr-keybind-manager

./: .SRCINFO  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  PKGBUILD  README.md  SECURITY.md  build.rs  clippy_before.txt  install.sh  run-clean.sh  rustfmt.toml  test-file-watcher.sh  test-sync-version.sh  test-tag-release.sh
.cargo/: config.toml  runner.sh
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  ENTROPY_DETECTION.md  refactoring_steps.md
scripts/: codex-project-mcp.sh  playwright-mcp-session.sh  sync-version.sh  tag-release.sh  test-escape-key.sh  wayland-mcp-session.sh  wayland-mcp-stdio.py
src/: lib.rs  main.rs
src/config/: danger.rs  error.rs  mod.rs  transaction.rs  validator.rs
src/config/danger/: entropy.rs  mod.rs  patterns.rs  types.rs
src/config/danger/tests/: entropy_tests.rs  integration_tests.rs  mod.rs  patterns_tests.rs
src/config/tests/: config_manager_tests.rs  mod.rs  transaction_tests.rs  validator_tests.rs
src/core/: conflict.rs  mod.rs  parser.rs  sandbox.rs  types.rs  validator.rs
src/core/tests/: conflict_tests.rs  mod.rs  parser_tests.rs  sandbox_tests.rs  types_tests.rs  validator_tests.rs
src/ipc/: mod.rs
src/ipc/tests/: mod.rs
src/ui/: actions.rs  app.rs  controller.rs  file_watcher.rs  mod.rs  style.css
src/ui/builders/: handlers.rs  header.rs  layout.rs  mod.rs
src/ui/components/: backup_dialog.rs  conflict_panel.rs  conflict_resolution_dialog.rs  details_panel.rs  edit_dialog.rs  keybind_list.rs  mod.rs  search_bar.rs
src/ui/tests/: backup_dialog_tests.rs  controller_tests.rs  layout_tests.rs  mod.rs
test-data/: hyprland-test.conf
test-data/backups/: hyprland-test.conf.2025-10-27_113222  hyprland-test.conf.2025-10-27_115530  hyprland-test.conf.2025-10-27_115546
