[package]
name = "hypr-keybind-manager"
version = "1.0.7"
edition = "2021"
rust-version = "1.83"
authors = ["Eric Jingryd <tidynest@proton.me>"]
description = "Secure keybinding manager for Hyprland with conflict detection"
license = "Apache-2.0"
repository = "https://github.com/tidynest/hypr-keybind-manager"
default-run = "hypr-keybind-manager"

[dependencies]
# GUI - use latest stable versions
gtk4 = { version = "0.10.1", features = ["v4_12"] }
glib = "0.21.3"

# Hyprland integration
hyprland = "0.3.13"

# Parsing and serialisation
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }

# File operations and system
atomic-write-file = "0.3.0"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
notify = "6.1.1"
shellexpand = "3.1.1"

# CLI interface
clap = { version = "4.5.48", features = ["derive", "cargo"] }
colored = "3.0.0"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"
regex = "1.12.1"

[build-dependencies]
pkg-config = "0.3.32"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
codegen-units = 1    # Better optimisation
lto = true           # Link-time optimisation
opt-level = "z"      # Optimise for size
panic = "abort"      # Smaller binary
strip = true         # Remove debug symbols

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
panic = "deny"
