[package]
name = "hypr-keybind-manager"
version = "1.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["Eric Jingryd <tidynest@proton.me>"]
description = "Secure keybinding manager for Hyprland with conflict detection"
license = "Apache-2.0"
repository = "https://github.com/tidynest/hypr-keybind-manager"
default-run = "hypr-keybind-manager"

[dependencies]
# GUI - use latest stable versions
gtk4 = { version = "0.11.2", features = ["v4_12"] }
glib = "0.22.5"

# Hyprland integration
hyprland = { version = "0.3.13", default-features = false, features = ["dispatch", "keyword"] }

# Parsing and serialisation
nom = "8.0.0"
serde = { version = "1.0.228", features = ["derive"] }

# File operations and system
atomic-write-file = "0.3.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
notify = "8.2.0"
shellexpand = "3.1.2"

# CLI interface
clap = { version = "4.6.0", features = ["derive", "cargo"] }
colored = "3.1.1"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"
regex = "1.12.3"

[dev-dependencies]
tempfile = "3.27.0"

[patch.crates-io]
hyprland = { path = "vendor/hyprland" }

[profile.release]
codegen-units = 1    # Better optimisation
lto = true           # Link-time optimisation
opt-level = "z"      # Optimise for size
panic = "abort"      # Smaller binary
strip = true         # Remove debug symbols

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
panic = "deny"
